# DES-evolutionary-algorithm

./: .gitignore  CMakeLists.txt  LICENSE  README.md
R/: ackley.R.txt  des.R  shubert.R  test_10_dim.R  test_20_dim.R  test_5_dim.R  tests.R
R/functions/: griewank.R  perm0db.R  rastr.R  rothyp.R  shekel.R  zakharov.R
R/results/: tests_R_results_10_dim.txt  tests_R_results_20_dim.txt  tests_R_results_5_dim.txt
include/: des.h  test_funtions.h
results_normal/: error_dim10.txt  error_dim20.txt  error_dim5.txt  times_dim10.txt  times_dim20.txt  times_dim5.txt
results_scientific/: error_dim10.txt  error_dim20.txt  error_dim5.txt  times_dim10.txt  times_dim20.txt  times_dim5.txt
src/: functions.c  lib.c  tests.c
